Localization unlimited, Fix Floating input, Fix the Font in arabic,; - Make the unlimited word transable. - Word break in the card. - Fix the labels in the floating inputs. - Fix the position of the invalid icon in RTL.

--- a/public/dashboard/css/style-rtl.css
+++ b/public/dashboard/css/style-rtl.css
@@ -14,7 +14,6 @@
 }
 
 body {
-    font-family: "Open Sans", sans-serif;
     background: #f6f9ff;
     color: #444444;
 }
@@ -33,8 +32,15 @@ h1,
 h2,
 h3,
 h4,
-h5,
+h5 {
+    font-family: "Baloo Bhaijaan 2";
+}
+
 h6 {
+    font-family: "Nunito", sans-serif;
+}
+
+#main>section>div>div>div.col-md-8>div>div.card-body>h5 {
     font-family: "Nunito", sans-serif;
 }
 
@@ -126,6 +132,7 @@ h6 {
     color: #444444;
     text-decoration: underline;
 }
+
 
 .dropdown-menu .dropdown-footer a:hover {
     text-decoration: none;
@@ -238,9 +245,17 @@ h6 {
 .card-title {
     padding: 20px 0 15px 0;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 700;
     color: #012970;
-    font-family: "Poppins", sans-serif;
+}
+
+.box {
+    font-size: 22px;
+    color: #012970;
+    font-weight: 700;
+    margin: 0;
+    padding: 0;
+    word-break: break-all;
 }
 
 .card-title span {
@@ -260,7 +275,7 @@ h6 {
 /* Alerts */
 .alert-heading {
     font-weight: 500;
-    font-family: "Poppins", sans-serif;
+    font-family: "Baloo Bhaijaan 2";
     font-size: 20px;
 }
 
@@ -309,7 +324,7 @@ h6 {
 /* Breadcrumbs */
 .breadcrumb {
     font-size: 14px;
-    font-family: "Nunito", sans-serif;
+    font-family: "Baloo Bhaijaan 2";
     color: #899bbd;
     font-weight: 600;
 }
@@ -377,7 +392,7 @@ h6 {
     font-size: 26px;
     font-weight: 700;
     color: #012970;
-    font-family: "Nunito", sans-serif;
+    font-family: "Baloo Bhaijaan 2";
 }
 
 .header {
@@ -820,6 +835,7 @@ h6 {
     font-weight: 700;
     margin: 0;
     padding: 0;
+    word-break: break-all;
 }
 
 .dashboard .card-icon {
@@ -1004,7 +1020,7 @@ h6 {
 }
 
 .iconslist .label {
-    font-family: var(--bs-font-monospace);
+    font-family: "Baloo Bhaijaan 2";
     display: inline-block;
     width: 100%;
     overflow: hidden;
@@ -1272,9 +1288,26 @@ h6 {
     padding-right: 1rem;
 }
 
+.form-control.is-invalid,
+.was-validated .form-control:invalid {
+    border-color: #dc3545;
+    padding-right: calc(1.5em + 0.75rem);
+    background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e);
+    background-repeat: no-repeat;
+    background-position: left calc(0.375em + 0.1875rem) center;
+    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+
 .footer .copyright {
     text-align: center;
     color: #012970;
+}
+
+.form-floating>.form-control-plaintext~label,
+.form-floating>.form-control:focus~label,
+.form-floating>.form-control:not(:placeholder-shown)~label,
+.form-floating>.form-select~label {
+    left: 108px;
 }
 
 .footer .credits {
